--- a/media/main.css
+++ b/media/main.css
@@ -1,11 +1,28 @@
-body {
-    padding: 10px;
+body, html {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    margin: 12px;
+}
+
+.input-container {
+    margin-bottom: 8px;
+}
+
+.button-container {
+    margin-bottom: 8px;
 }
 
 input {
     width: 100%;
     box-sizing: border-box;
-    margin-bottom: 10px;
 }
 
 button {
